--- a/fly.toml
+++ b/fly.toml
@@ -1,15 +1,15 @@
-# fly.toml app configuration file generated for consagracaomtn on 2024-09-11T21:31:41-03:00
+# fly.toml app configuration file generated for mtnconsacration on 2024-09-11T21:39:57-03:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'consagracaomtn'
+app = 'mtnconsacration'
 primary_region = 'gru'
 
 [build]
 
 [http_service]
-  internal_port = 8000
+  internal_port = 8080
   force_https = true
   auto_stop_machines = 'stop'
   auto_start_machines = true
